--- a/style.css
+++ b/style.css
@@ -38,4 +38,13 @@ body {
   margin: 10px 0;
   border-radius: 10px;
 }
+.profile-img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #333;
+  margin-bottom: 15px;
+}
+
 
