--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
 .lab p {
   font-size: 0.95rem;
 }
-.lab-images {
+/* .lab-images {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
@@ -131,5 +131,5 @@ footer {
   border-radius: 8px;
   object-fit: cover;
   max-height: 200px;
-}
+} */
 
